--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "scripts": {
     "test": "node example.js"
   },
-  "version": "1.0.2"
+  "version": "1.0.3",
+  "dependencies": {
+    "eris": "^0.14.0"
+  }
 }
